# backend

./: .dockerignore  .env.template  .gitattributes  .gitignore  PDFSplitter_linux.py  README.md  local.yml  manage.py  pdf_highlighter.py  production.yml  pyproject.toml  setup.cfg  sum.json
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml
chat_backend/: conftest.py
chat_backend/chat/: admin.py  apps.py  const.py  consumers.py  models.py  tasks.py
chat_backend/chat/api/: serializers.py  urls.py  views.py
chat_backend/chat/migrations/: 0001_initial.py  0002_message.py  0003_alter_message_options_message_reply.py  0004_messagefile_message_files.py  0005_remove_message_files.py  0006_messagefile_text.py  0007_alter_messagefile_text.py
chat_backend/common/: channels.py  models.py  signals.py  tasks.py
chat_backend/tickets/: admin.py  apps.py  models.py  services.py  signals.py
chat_backend/tickets/api/: serializers.py  urls.py  views.py
chat_backend/tickets/migrations/: 0001_initial.py
chat_backend/users/: apps.py  models.py
chat_backend/users/migrations/: 0001_initial.py
chat_backend/users/tests/: test_models.py
chat_backend/utils/: channels.py  files.py  generators.py
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile  entrypoint
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  routing.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
(+1 files in other folders)
